fix shadow z-index

--- a/ai-proficient/css/ai-proficient.css
+++ b/ai-proficient/css/ai-proficient.css
@@ -108,6 +108,17 @@
 .aip\[article\] figure {
   width: 40%;
 }
+.aip\[article-shadow\] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #FFF;
+  z-index: -1;
+}
 
 /* Partners */
 
